# TECFS_Test

./: CMakeLists.txt  Menu.cpp  Menu.h  Singleton.cpp  Singleton.h  VideoHandler.cpp  VideoHandler.h  main.cpp
DataStructures/: LinkedList.h  Node.h
VideoPlayer/: MediaInfo.hpp  StreamSelector.hpp  UserInterface.hpp  VideoPlayerWindow.cpp  VideoPlayerWindow.h
